Started implementing error classes, added a game over marker to each player and added that in the checking phase